Smartlist: Account for lists when adding smartlist requirement